#Nmap Changelog ($Id$); -*-text-*-

Nmap 7.95 [2024-04-23]

o Integrated over 4,000 of your IPv4 OS fingerprints. Added 336 signatures,
  bringing the new total to 6,036.  Additions include iOS 15 & 16, macOS
  Ventura & Monterey, Linux 6.1, OpenBSD 7.1, and lwIP 2.2

o Integrated over 2,500 service/version detection fingerprints. The signature
  count went up 1.4% to 12,089, including 9 new softmatches.  We now detect
  1,246 protocols, including new additions of grpc, mysqlx, essnet,
  remotemouse, and tuya.

o [Windows] Upgraded Npcap (our Windows raw packet capturing and transmission
  driver) from version 1.75 to the latest version 1.79. It includes many
  performance improvements, bug fixes and feature enhancements described at
  https://npcap.com/changelog.

o [NSE] Added four new scripts from the DINA community
  (https://github.com/DINA-community) for querying industrial control
  systems:

  + hartip-info reads device information from devices using the Highway
    Addressable Remote Transducer protocol

  + iec61850-mms queries devices using Manufacturing Message Specification
    requests. [Dennis Rösch, Max Helbig]

  + multicast-profinet-discovery Sends a multicast PROFINET DCP Identify All
    message and prints the responses. [Stefan Eiwanger, DINA-community]

  + profinet-cm-lookup queries the DCERPC endpoint mapper exposed via the
    PNIO-CM service.

o Improvements to OS detection fingerprint matching, including a syntax
  change for nmap-os-db that allows ranges within the TCP Options
  string. This leads to more concise and maintainable fingerprints. [Daniel
  Miller]

o Improved the OS detection engine by using a new source port for each retry.
  Scans from systems such as Windows that do not send RST for unsolicited
  SYN|ACK responses were previously unable to get a response in subsequent
  tries. [Daniel Miller]

o Several profile-guided optimizations of the port scan engine. [Daniel Miller]
